--- a/src/html/index.html
+++ b/src/html/index.html
@@ -66,7 +66,9 @@
           <td>
             <select name="formaDePagamento" id="formaDePagamento">
               <option value="transBanc">TRANSFERÊNCIA BANCÁRIA</option>
-              <option value="pix">PIX</option>
+              <option value="pixCpf">PIX CHAVE(CPF)</option>
+              <option value="pixEmail">PIX CHAVE(Email)</option>
+              <option value="pixTel">PIX CHAVE(Telefone)</option>
             </select>
           </td>
         </tr>
